# vit

./: .gitignore  01_transformer_attention.ipynb  01_transformer_attention.py  README.md  pyproject.toml
01_transformer_attention/: 01_transformer_attention.ipynb
02_vit_cifar10/: tnt.py  train.py  vit.py
03_detr_visdrone/: README.md  config.py  dataset.py  detr.py  download_visdrone.py  evaluate.py  load_pretrained.py  losses.py  matcher.py  train.py  visdrone2coco.py  visualize.py  visualize_dataset.py
04_segformer/: README.md  train.py
04_segformer/dataset/: ade20k.py
04_segformer/scripts/: download_ade20k.py  download_easyportrait.py
04_segformer_ade20k/: README.md  download_ade20k.py  segformer.py  test_weight_loading.py  train.py
04_segformer_ade20k/dataset/: easyportrait.py
