[project]
name = "vit"
version = "0.9.9"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.6.0+cu124",
    "torchvision==0.21.0+cu124",
    "torchaudio==2.6.0+cu124",
    "torchtext==0.6.0",
    "spacy==3.8.11",
    "jupyter==1.1.1",
    "seaborn==0.13.2",
    "pillow==12.0.0",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "de-core-news-sm @ https://github.com/explosion/spacy-models/releases/download/de_core_news_sm-3.8.0/de_core_news_sm-3.8.0-py3-none-any.whl",
    # Or download with:
    # uv run python -m spacy download en_core_web_sm
    # uv run python -m spacy download de_core_news_sm
    "timm==1.0.24",
    "einops==0.8.2",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
torchaudio = { index = "pytorch-cu124" }
torchtext = { index = "pytorch-cu124" }
